[gd_scene load_steps=19 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://assets/cloud/staticserver.png" type="Texture" id=2]
[ext_resource path="res://assets/cloud/firewall.png" type="Texture" id=3]
[ext_resource path="res://assets/cloud/lb.png" type="Texture" id=4]
[ext_resource path="res://assets/cloud/dynamicserver.png" type="Texture" id=5]
[ext_resource path="res://assets/cloud/database.png" type="Texture" id=6]
[ext_resource path="res://monospace_font.tres" type="Theme" id=7]
[ext_resource path="res://addons/FontAwesome5/FontAwesome.gd" type="Script" id=8]
[ext_resource path="res://addons/FontAwesome5/fa-solid-900.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://addons/FontAwesome5/fa-regular-400.ttf" type="DynamicFontData" id=10]

[sub_resource type="Animation" id=1]
resource_name = "copy"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Meta/ClipBoard:icon_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.35 ),
"transitions": PoolRealArray( 1, 2.82843 ),
"update": 0,
"values": [ 24, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Meta/ClipBoard:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1.23114 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 177.757

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Database",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Firewall",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "DynamicServer",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "StaticServer",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "LoadBalancer",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=4]
hinting = 1
font_path = "res://assets/fonts/SourceCodePro-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
font_data = SubResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 9 )

[node name="Server" type="KinematicBody2D"]
pause_mode = 2
z_index = 5
input_pickable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 60.7049 ]
}

[node name="ClipBoardAnimation" type="AnimationPlayer" parent="."]
autoplay = "copy"
anims/copy = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CollisionShape2D"]
frames = SubResource( 3 )
animation = "Database"

[node name="Meta" type="Node2D" parent="."]

[node name="DNSNameLabel" type="Label" parent="Meta"]
margin_left = -47.3266
margin_top = 53.3723
margin_right = 47.6734
margin_bottom = 74.3723
theme = SubResource( 6 )
text = "dns_name"
align = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClipBoard" type="Label" parent="Meta"]
visible = false
margin_top = 80.0
margin_right = 12.0
margin_bottom = 96.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 7 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 15
icon_type = "regular"
icon_name = "clipboard"

[node name="ConfigWindow" type="TabContainer" parent="Meta"]
margin_left = 72.0
margin_top = -42.0
margin_right = 338.0
margin_bottom = 64.0
tab_align = 0
use_hidden_tabs_for_min_size = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Control" parent="Meta/ConfigWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 15 )

[node name="NameLabel" type="Label" parent="Meta/ConfigWindow/Info"]
margin_top = 0.774063
margin_right = 93.0
margin_bottom = 14.7741
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Meta/ConfigWindow/Info"]
margin_left = 98.0
margin_top = -3.0
margin_right = 183.0
margin_bottom = 17.0
theme = ExtResource( 7 )
text = "10.0.0.0"
max_length = 12
caret_blink = true

[node name="InstanceSizeLabel" type="Label" parent="Meta/ConfigWindow/Info"]
margin_top = 39.0
margin_right = 93.0
margin_bottom = 53.0
text = "Instance Type:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InstanceSize" type="Label" parent="Meta/ConfigWindow/Info"]
margin_left = 97.0
margin_top = 39.0
margin_right = 184.0
margin_bottom = 53.0
text = "a1-medium-1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeInstance" type="Button" parent="Meta/ConfigWindow/Info"]
margin_left = 193.0
margin_top = 36.0
margin_right = 258.0
margin_bottom = 56.0
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="Meta/ConfigWindow/Info"]
margin_top = 21.0
margin_right = 93.0
margin_bottom = 35.0
text = "IP Address:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="Meta/ConfigWindow/Info"]
margin_left = 97.0
margin_top = 21.0
margin_right = 184.0
margin_bottom = 35.0
text = "10.0.0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="Label" parent="Meta/ConfigWindow/Info"]
margin_top = 55.0
margin_right = 93.0
margin_bottom = 69.0
text = "Cost:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Meta/ConfigWindow/Info"]
margin_left = 97.0
margin_top = 55.0
margin_right = 184.0
margin_bottom = 69.0
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleConfig" type="ToolButton" parent="Meta"]
margin_left = -72.0
margin_top = -42.0
margin_right = -52.0
margin_bottom = -20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Label" parent="Meta/ToggleConfig"]
margin_left = -3.0
margin_right = 17.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_name = "wrench"

[node name="SysLoadBar" type="ProgressBar" parent="Meta"]
show_behind_parent = true
margin_left = -71.5707
margin_top = 26.0
margin_right = -27.5707
margin_bottom = 40.0
rect_rotation = -90.0
hint_tooltip = "Server Load"
max_value = 1.0
value = 0.5
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Meta/ConfigWindow/Info/Name" to="." method="_on_Name_text_changed"]
[connection signal="pressed" from="Meta/ConfigWindow/Info/UpgradeInstance" to="." method="upgrade"]
[connection signal="pressed" from="Meta/ToggleConfig" to="." method="_on_ToggleConfig_pressed"]
